<resources>
    <string name="app_name">PARQUEADERO</string>
    <string name="textoAbout">ACERCA DE</string>
    <string name="textoAboutTitulo">EXAMEN FINAL DESARROLLO DE NUEVAS TECNOLOGIAS</string>
    <string name="textoAboutIntegrantes">PRESENTADO POR</string>
    <string name="texto_ingresar_vehiculo">INGRESAR VEHICULO</string>
    <string name="texto_salida_vehiculo">SALIDA DE VEHICULO</string>
    <string name="texto_listar_vehiculos">LISTAR TODOS LOS VEHICULOS</string>
    <string name="texto_lista_parqueados">LISTAR SOLO VEHICULOS PARQUEADOS EN ESTE MOMENTO</string>
    <string name="texto_actualizar">ACTUALIZAR VEHICULO</string>
    <string name="texto_eliminar">ELIMINAR VEHICULO DE LA BASE DE DATOS</string>

    <string-array name="arrayHoras">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <string-array name="arrayMinutos">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

</resources>
